fixed alignment issues

--- a/style.css
+++ b/style.css
@@ -20,7 +20,7 @@
                 }
                 .minecraftImage {
                     float: right;
-                    margin:-4.1% 1.9%;
+                    margin:-.5% 1.9%;
                     width: 25%;
                 }
 
